Fixed bug in mobile on Firefox where the cards would grow to ridiculous size. Resolved by limiting the card size and setting the textbox on the card to grow.

--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,19 @@
 .card {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  max-height: 850px;
 }
 .card-header {
-  height: 80%;
 }
 
 .card-footer {
-  height: 55px;
 }
 .card-content {
   padding: 18px;
+  height: 80%;
+  display: flex;
+  align-items: center;
   /*overflow:hidden;
   text-overflow: ellipsis; */
 }
